--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
     async function getUserProfile() {
       const profile = await liff.getProfile()
+      console.log(profile)
       document.getElementById("pictureUrl").src = profile.pictureUrl
       document.getElementById("userId").append(profile.userId)
       document.getElementById("statusMessage").append(profile.statusMessage)
