--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       
       liff.permanentLink.setExtraQueryParam('param=9')
       const link2 = liff.permanentLink.createUrl()
-      document.getElementById("universalLink2").append(link2)
+      document.getElementById("universalLink2").append("<a href='"+link2+"'>"+link2+"</a>")
     }
 
     async function shareMsg() {
