--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
   <script>
     function createUniversalLink() {
       const link1 = liff.permanentLink.createUrl()
-      document.getElementById("universalLink1").href(`${link1}`)
-      document.getElementById("universalLink1").append(`${link1}`)
+      document.getElementById("universalLink1").href(link1)
+      document.getElementById("universalLink1").append(link1)
 
       liff.permanentLink.setExtraQueryParam('param=9')
       const link2 = liff.permanentLink.createUrl()
-      document.getElementById("universalLink2").append(`${link2}`)
+      document.getElementById("universalLink2").append(link2)
     }
 
     async function shareMsg() {
