--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     
     function openWindow() {
       liff.openWindow({
-        url: "https://line.me",
+        url: "https://www.navakij.co.th/",
         external: true
       })
     }
