--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
 
     function getRequest(){
       liff.permission.query('profile').then(permissionStatus => {
+        console.log("permissionStatus:",permissionStatus)
         if (permissionStatus.state === 'prompt') {
           liff.permission.requestAll();
+          console.log("permission",liff.permission.requestAll())
         }
       });
     }
