--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <script>
     function createUniversalLink() {
       const link1 = liff.permanentLink.createUrl()
-      document.getElementById("universalLink1").href(link1)
+      document.getElementById("universalLink1").href = link1
       document.getElementById("universalLink1").append(link1)
 
       liff.permanentLink.setExtraQueryParam('param=9')
