--- a/index.html
+++ b/index.html
@@ -140,30 +140,16 @@
         await liff.sendMessages([
           {
             "type": "imagemap",
-            "baseUrl": "https://example.com/bot/images/rm001",
+            "baseUrl": "https://sandbox.conicle.co/media/account/2022/01/15befdcf-f1f.jpg?w=auto",
             "altText": "This is an imagemap",
             "baseSize": {
                 "width": 1040,
                 "height": 1040
             },
-            "video": {
-                "originalContentUrl": "https://example.com/video.mp4",
-                "previewImageUrl": "https://example.com/video_preview.jpg",
-                "area": {
-                    "x": 0,
-                    "y": 0,
-                    "width": 1040,
-                    "height": 585
-                },
-                "externalLink": {
-                    "linkUri": "https://example.com/see_more.html",
-                    "label": "See More"
-                }
-            },
             "actions": [
                 {
                     "type": "uri",
-                    "linkUri": "https://example.com/",
+                    "linkUri": "https://www.navakij.co.th/",
                     "area": {
                         "x": 0,
                         "y": 586,
