--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     }
 
     async function sendMsg() {
+      console.log(liff.getContext().type)
       if (liff.getContext().type !== "none") {
         await liff.sendMessages([
           {
