--- a/index.html
+++ b/index.html
@@ -141,33 +141,63 @@
         await liff.sendMessages([
           {
             "type": "imagemap",
-            "baseUrl": "https://sandbox.conicle.co/media/account/2022/01/15befdcf-f1f.jpg?w=auto",
+            "baseUrl": "https://sv1.picz.in.th/images/2022/01/17/nq60og.png",
             "altText": "This is an imagemap",
             "baseSize": {
-                "width": 1040,
-                "height": 1040
+              "width": 1040,
+              "height": 1718
             },
             "actions": [
-                {
-                    "type": "uri",
-                    "linkUri": "https://www.navakij.co.th/",
-                    "area": {
-                        "x": 0,
-                        "y": 586,
-                        "width": 520,
-                        "height": 454
-                    }
+              {
+                "type": "uri",
+                "area": {
+                  "x": 6,
+                  "y": 2,
+                  "width": 1029,
+                  "height": 340
                 },
-                {
-                    "type": "message",
-                    "text": "Hello",
-                    "area": {
-                        "x": 520,
-                        "y": 586,
-                        "width": 520,
-                        "height": 454
-                    }
-                }
+                "linkUri": "https://www.navakij.co.th/"
+              },
+              {
+                "type": "uri",
+                "area": {
+                  "x": 9,
+                  "y": 341,
+                  "width": 1028,
+                  "height": 344
+                },
+                "linkUri": "https://www.navakij.co.th/"
+              },
+              {
+                "type": "uri",
+                "area": {
+                  "x": 7,
+                  "y": 685,
+                  "width": 1031,
+                  "height": 345
+                },
+                "linkUri": "https://www.navakij.co.th/"
+              },
+              {
+                "type": "uri",
+                "area": {
+                  "x": 10,
+                  "y": 1030,
+                  "width": 1025,
+                  "height": 341
+                },
+                "linkUri": "https://www.navakij.co.th/"
+              },
+              {
+                "type": "uri",
+                "area": {
+                  "x": 9,
+                  "y": 1371,
+                  "width": 1026,
+                  "height": 347
+                },
+                "linkUri": "https://www.navakij.co.th/"
+              }
             ]
           }
         ])
