--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         liff.sendMessages([
           {
             "type": "imagemap",
-            "baseUrl": "PROVIDE_URL_FROM_YOUR_SERVER",
+            "baseUrl": "https://sv1.picz.in.th/images/2022/01/17/nq60og.png",
             "altText": "This is an imagemap",
             "baseSize": {
               "width": 1040,
