--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       if (liff.isInClient()) {
         document.getElementById("btnLogOut").style.display = "none"
       } else {
-        document.getElementById("btnMsg").style.display = "none"
+        //document.getElementById("btnMsg").style.display = "none"
         document.getElementById("btnScanCode").style.display = "none"
         document.getElementById("btnClose").style.display = "none"
       }
