--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     async function sendMsg() {
       console.log(liff.getContext().type)
       if (liff.getContext().type !== "none") {
-        liff.sendMessages([
+        await liff.sendMessages([
           {
             "type": "imagemap",
             "baseUrl": "https://sv1.picz.in.th/images/2022/01/17/nq60og.png?w=auto",
@@ -201,12 +201,7 @@
             ]
           }
         ])
-        .then(() => {
-            console.log('message sent')
-        })
-        .catch((err) => {
-            console.log('error', err)
-        })
+        alert('message sent.')
       }
     }
 
