--- a/index.html
+++ b/index.html
@@ -56,48 +56,19 @@
     async function shareMsg() {
       await liff.shareTargetPicker([
         {
-          "type": "imagemap",
-          "baseUrl": "https://example.com/bot/images/rm001",
-          "altText": "This is an imagemap",
-          "baseSize": {
-              "width": 1040,
-              "height": 1040
-          },
-          "video": {
-              "originalContentUrl": "https://example.com/video.mp4",
-              "previewImageUrl": "https://example.com/video_preview.jpg",
-              "area": {
-                  "x": 0,
-                  "y": 0,
-                  "width": 1040,
-                  "height": 585
-              },
-              "externalLink": {
-                  "linkUri": "https://example.com/see_more.html",
-                  "label": "See More"
-              }
-          },
-          "actions": [
-              {
-                  "type": "uri",
-                  "linkUri": "https://example.com/",
-                  "area": {
-                      "x": 0,
-                      "y": 586,
-                      "width": 520,
-                      "height": 454
-                  }
-              },
-              {
-                  "type": "message",
-                  "text": "Hello",
-                  "area": {
-                      "x": 520,
-                      "y": 586,
-                      "width": 520,
-                      "height": 454
-                  }
-              }
+          "type": "text",
+          "text": "$ LINE emoji $",
+          "emojis": [
+            {
+              "index": 0,
+              "productId": "5ac1bfd5040ab15980c9b435",
+              "emojiId": "001"
+            },
+            {
+              "index": 13,
+              "productId": "5ac1bfd5040ab15980c9b435",
+              "emojiId": "002"
+            }
           ]
         }
       ])
